feat : 메인페이지 릴레이 랜덤 조회
- 메인페이지에서 상위 캐러셀에 띄울 릴레이 n개의 정보를 간단히 조회합니다.
- 유저는 프로필 이미지를 갖습니다.